temp/temp2/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`test.lucky-gun.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80

  tls:
    secretName: wildcard-cert
